--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+*{
+   /* margin: 0; */
+   padding:0;    
+}
 
-
-body{
-background-color: aqua
+canvas{
+border: 1px solid black;
+width:780px;
+height:720px;
 }
