--- a/style.css
+++ b/style.css
@@ -7,4 +7,13 @@ canvas{
 border: 1px solid black;
 width:780px;
 height:720px;
+background-color: pink;
+}
+
+#score {
+ position:absolute;
+}
+
+body{
+   background-color:green;
 }
