--- a/style.css
+++ b/style.css
@@ -5,7 +5,12 @@
 }
 
 body{
-   background-color:black;
+   /* background-color:black; */
+   margin: 0;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   height: 100vh;
 }
 canvas{
 border: 1px solid black;
@@ -17,6 +22,9 @@ justify-content: center;
 
 #score {
  position:absolute;
+ /* flex-direction: column; */
+ /* position: fixed; */
+
 }
 
 #speed {
